# clang-tidy-ocv

./: .editorconfig  CMakeLists.txt  module.cpp
checks/: dummy_check.cpp  dummy_check.hpp
